fix: contrast and tabs

--- a/src/frontend/screens/Game/GamePage/index.css
+++ b/src/frontend/screens/Game/GamePage/index.css
@@ -439,7 +439,7 @@
         }
       }
 
-      .achievement-container {
+      & div.achievementsTab .achievement-container {
         display: flex;
         flex-direction: column;
         gap: 1rem;
@@ -453,8 +453,10 @@
           .achievement-icon {
             height: 60px;
             width: 60px;
-            border-radius: var(--space-3xs);
 
+            img {
+              border-radius: var(--space-3xs);
+            }
             &.rarity-epic {
               box-shadow: 0 0 4px gold;
             }
@@ -473,11 +475,11 @@
             }
             .achievement-desc {
               font-size: var(--text-xs);
-              color: var(--neutral-05);
+              color: var(--neutral-06);
             }
             .achievement-rarity {
               font-size: var(--text-xs);
-              color: var(--neutral-04);
+              color: var(--neutral-05);
             }
           }
 
@@ -737,6 +739,15 @@
 
     .MuiTabs-flexContainer {
       border-bottom: none;
+    }
+
+    .MuiTabs-scrollButtons {
+      height: 100%;
+      width: 30px;
+
+      &.Mui-disabled {
+        opacity: 0.2;
+      }
     }
   }
 
